--- a/style.css
+++ b/style.css
@@ -6,8 +6,13 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: rgb(230, 233, 233);
+}
+
 h1 {
   text-align: center;
+  color: rgb(90, 90, 129);
   margin-top: 2rem;
   margin-bottom: 6rem;
 }
@@ -37,6 +42,19 @@ h1 {
   color: white;
 }
 
+.calculator-display {
+  background-color: rgb(94, 94, 94);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding: 4px 4px 0 4px;
+}
+
+.result {
+  font-size: 24px;
+}
+
 .buttons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -57,11 +75,37 @@ h1 {
   color: white;
   cursor: pointer;
   font-size: 24px;
-  /* padding: 1rem 0; */
+  transition: 0.25s;
 }
 
 #equals {
   grid-column: 3 / 5;
   border-radius: 2.5rem;
   width: 100%;
+}
+
+button:hover {
+  transform: translateY(-0.15rem);
+}
+
+button:active {
+  transform: translateY(.15rem);
+}
+
+.numbers:hover,
+.decimal:hover {
+  background-color: rgb(165, 165, 165);
+}
+
+.operators:hover {
+  background-color: rgb(92, 208, 216);
+}
+
+.equals:hover {
+  background-color: rgb(56, 185, 56);
+}
+
+.all-clear:hover,
+.clear:hover {
+  background-color: rgb(219, 78, 78);
 }
