--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h1 {
 
 .display {
   background-color: rgb(59, 59, 59);
-  height: 5rem;
+  height: 6rem;
   padding: 1rem;
   text-align: end;
   border-radius: 10px 10px 0 0;
@@ -49,6 +49,7 @@ h1 {
   justify-content: space-between;
   height: 100%;
   padding: 4px 4px 0 4px;
+  border-radius: 4px;
 }
 
 .result {
